# KaZa-Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Config.cmake.in
conf/: KaZaServer.service  kazad.conf  kazad.service  postinst  postrm
src/: internalobject.cpp  internalobject.h  kazacertificategenerator.cpp  kazacertificategenerator.h  kazaconnection.cpp  kazaconnection.h  kazaelement.cpp  kazaelement.h  kazamanager.cpp  kazamanager.h  kazaobject.cpp  kazaobject.h  kazaremoteconnection.cpp  kazaremoteconnection.h  kzalarm.cpp  kzalarm.h  kzobject.cpp  kzobject.h  main.cpp  scheduler.cpp  scheduler.h
src/cmd/: kls.cpp
src/cron/: qcron.cpp  qcron.h  qcronfield.cpp  qcronfield.h  qcronnode.h  scheduler.cpp  scheduler.h
tools/: make_certificate.sh
